<resources>
    <string name="app_name">iOJ</string>
    <string name="description">Consider the following exercise, found in a generic linear algebra textbook.


Let A be an n × n matrix. Prove that the following statements are equivalent:
(a) A is invertible.
(b) Ax = b has exactly one solution for every n × 1 matrix b.
(c) Ax = b is consistent for every n × 1 matrix b.
(d) Ax = 0 has only the trivial solution x = 0.


The typical way to solve such an exercise is to show a series of implications. For instance, one can proceed by showing that (a) implies (b), that (b) implies (c), that (c) implies (d), and ﬁnally that (d) implies (a). These four implications show that the four statements are equivalent.


Another way would be to show that (a) is equivalent to (b) (by proving that (a) implies (b) and that (b) implies (a)), that (b) is equivalent to (c), and that (c) is equivalent to (d).However, this way requires proving six implications, which is clearly a lot more work thanjust proving four implications!


I have been given some similar tasks, and have already started proving some implica-tions. Now I wonder, how many more implications do I have to prove? Can you help me determine this?</string>
    <string name="input">On the ﬁrst line one positive number: the number of testcases, at most 100. After that per testcase:


• One line containing two integers n (1 ≤ n ≤ 20 000) and m (0 ≤ m ≤ 50 000): the number of statements and the number of implications that have already been proved.
• m lines with two integers s1 and s2 (1 ≤ s1, s2 ≤ n and s1 6= s2) each, indicating that it has been proved that statement s1 implies statement s2.</string>
    <string name="output">er testcase:
• One line with the minimum number of additional implications that need to be proved
in order to prove that all statements are equivalent.</string>
    <string name="si">2
4 0
3 2
1 2
1 3</string>
    <string name="so">4
2</string>
</resources>
