<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:background="#EAEAEA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="9dp"
                android:layout_marginRight="9dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="1dp"
                app:cardCornerRadius="5dp"
                app:cardElevation="3dp">
                <TextView
                    android:id="@+id/pbv_limit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Time limit:1000     Memory limit:65535"
                    android:gravity="center_horizontal|center_vertical"
                    android:textColor="#00a5e2"
                    android:textSize="15sp"
                    android:padding="10dp"/>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/icons"
                        android:background="@color/primary"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:paddingTop="3dp"
                        android:paddingBottom="4dp"
                        android:text="Description"/>
                    <TextView
                        android:id="@+id/pbv_description"
                        android:layout_marginTop="6dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginBottom="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/description"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/icons"
                        android:background="@color/primary"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:paddingTop="3dp"
                        android:paddingBottom="4dp"
                        android:text="Input"/>
                    <TextView
                        android:id="@+id/pbv_input"
                        android:layout_marginTop="6dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginBottom="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/input"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/icons"
                        android:background="@color/primary"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:paddingTop="3dp"
                        android:paddingBottom="4dp"
                        android:text="Output"/>
                    <TextView
                        android:id="@+id/pbv_output"
                        android:layout_marginTop="6dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginBottom="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/output"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/icons"
                        android:background="@color/primary"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:paddingTop="3dp"
                        android:paddingBottom="4dp"
                        android:text="Sample Input"/>
                    <TextView
                        android:id="@+id/pbv_sampleinput"
                        android:layout_marginTop="6dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginBottom="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/si"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/icons"
                        android:background="@color/primary"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:paddingTop="3dp"
                        android:paddingBottom="4dp"
                        android:text="Sample Output"/>
                    <TextView
                        android:id="@+id/pbv_sampleoutput"
                        android:layout_marginTop="6dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginBottom="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/so"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>
</LinearLayout>